# events

./: .env.prod.enc  .sops.yaml  Dockerfile  Dockerfile.otel  build-deploy.sh  build.sh  compose-dev.yaml  compose-dev.yml  compose.prod.yml  deploy.sh  otel-collector-config.yaml
service/: Cargo.toml
service/src/: dashboard.rs  data.rs  error.rs  gps.rs  main.rs
